Revert "fix the write-up formatting (was going right off screen)"
This reverts commit fbd7c694002829e3bba09dc37697fadba8003325.

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,13 +31,6 @@ body {
     font-size: 12px;
 }
 
-#writeup {
-    padding: 10px;
-    margin-left: 1.5rem;
-    max-width: 1000px; /* just a little wider than the svg above */
-    /* border: 1px solid black; */ /* for debugging to see the border */
-}
-
 /* Styling axes with CSS */
 .x-axis path,
 .y-axis path,
